--- a/MediaCopy/css/global-media.css
+++ b/MediaCopy/css/global-media.css
@@ -197,6 +197,13 @@
         max-width: 100%;
         width: 100%;
     }
+    .search {
+        padding: 7px 15px 7px 18px;
+        font-size: 14px;
+    }
+    .search img{
+        width: 15px;
+    }
 }
 @media(max-width: 400px){
     .container{
