--- a/MediaCopy/css/template-parts.css
+++ b/MediaCopy/css/template-parts.css
@@ -19,6 +19,9 @@
     align-items: center;
     padding: 12px 0;
 }
+.logo img{
+    width: 130px;
+}
 .mobile-logo img{
     width: 160px;
     vertical-align: middle;
