--- a/website/css/media.css
+++ b/website/css/media.css
@@ -809,6 +809,8 @@
 	}
 	.author__prev,
 	.author__next{
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
 		z-index: 2;
 		position: absolute;
 		top: 57%;
