--- a/Provider/css/vars.css
+++ b/Provider/css/vars.css
@@ -4,6 +4,7 @@
 	--RobotoRegular: 'Roboto-Regular';
 	--RobotoMedium: 'Roboto-Medium';
 	--RobotoBold: 'Roboto-Bold';
+	--BebasRegular: 'Bebas Neue';
 
 	/* Colors */
 	--Green: #2EE89A;
