--- a/Provider/css/style.css
+++ b/Provider/css/style.css
@@ -999,7 +999,7 @@
 	border-radius: 25px;
 }
 .digital__info {
-	margin-top: 135px;
+	margin-top: 25px;
 }
 .digital__info-fill {
 	display: flex;
@@ -1089,6 +1089,11 @@
 	display: flex;
 	justify-content: space-between;
 	gap: 23px;
+}
+.digital__preview-slide{
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
 }
 .digital__preview-slide-info{
 	text-align: center;
