--- a/Provider/css/style.css
+++ b/Provider/css/style.css
@@ -1091,6 +1091,7 @@
 	gap: 23px;
 }
 .digital__preview-slide{
+	border-radius: 15px;
 	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
