--- a/Provider/css/popup.css
+++ b/Provider/css/popup.css
@@ -1,5 +1,11 @@
-/* Partner Popup Start */
-	.partner{
+/* All Popups Start */
+	.popup .green{
+		color: var(--Green);
+	}
+	.popup .red{
+		color: var(--Red);
+	}
+	.popup{
 		position: fixed;
 		visibility: hidden;
 		top: 0;
@@ -16,42 +22,59 @@
 		opacity: 0;
 		transition: opacity .3s, visibility .3s;
 	}
-	.partner.show{
+	.popup.show{
 		visibility: visible;
 		opacity: 1;
 	}
-	.partner__wrapper{
+	.popup__wrapper{
 		max-width: 1300px;
 		width: 100%;
 		position: relative;
 		background: #fff;
 		border-radius: 15px;
 	}
-	.partner__fill{
+	.popup__fill{
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
+	}
+	.popup__preview{
+		margin: auto 0;
+	}
+	.popup__info{
+		position: relative;
+	}
+	.popup__info::before{
+		content: '';
+		position: absolute;
+		left: 0;
+		width: 2px;
+		background: var(--Green);
+	}
+	.popup__title{
+		font-family: var(--RobotoBold);
+		font-size: 36px;
+		margin-bottom: 15px;
+	}
+	.popup-close{
+		position: absolute;
+		right: 40px;
+		top: 30px;
+	}
+/* All Popups End */
+
+/* Partner Popup Start */
+	.partner__fill{
 		gap: 180px;
-		padding: 17px 162px;
+		padding: 45px 162px;
 	}
 	.partner__info{
 		max-width: 460px;
 		width: 100%;
 		padding-left: 15px;
-		position: relative;
 	}
 	.partner__info::before{
-		content: '';
-		position: absolute;
-		left: 0;
 		top: 8px;
 		height: 260px;
-		width: 2px;
-		background: var(--Green);
-	}
-	.partner__title{
-		font-family: var(--RobotoBold);
-		font-size: 36px;
-		margin-bottom: 15px;
 	}
 	.partner__text{
 		text-align: justify;
@@ -64,9 +87,105 @@
 		padding: 9px 18px;
 		color: #fff;
 	}
-	.partner-close{
-		position: absolute;
-		right: 40px;
-		top: 30px;
-	}
 /* Partner Popup End */
+
+/* Memo Popups Start */
+.memo-popup-wrapper{
+	min-height: 400px;
+	padding: 55px 50px 30px 120px;
+}
+.memo-popup-info{
+	padding-left: 15px;
+	margin-left: 25px;
+}
+.memo-popup-items{
+	display: flex;
+	align-items: flex-start;
+	gap: 15px;
+	flex-wrap: wrap;
+}
+.memo-popup-item{
+	max-width: 245px;
+	width: 100%;
+	font-size: 18px;
+	color: #000;
+	display: flex;
+	align-items: center;
+	gap: 25px;
+	padding: 27px 27px 27px 20px;
+	border-radius: 20px;
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.1);
+}
+.memo-popup-item img{
+	max-width: 75px;
+	max-height: 75px;
+}
+.memo-popup-list{
+	margin-bottom: 12px;
+}
+.memo-popup-list-item{
+	font-size: 16px;
+	color: #000;
+}
+.memo-popup-list-item + .memo-popup-list-item{
+	margin-top: 5px;
+}
+.memo-popup-list-item span{
+	font-family: var(--RobotoMedium);
+}
+/* Memo Popups End */
+
+/* SSL Popup Start */
+.ssl-popup__info::before{
+	height: 270px;
+	top: 8px;
+}
+.ssl-popup__title{
+	margin-bottom: 40px;
+}
+/* SSL Popup End */
+
+/* IPTV Popup Start */
+.iptv-popup__list-item{
+	font-size: 18px;
+}
+.iptv-popup__info::before{
+	height: 270px;
+	top: 8px;
+}
+/* IPTV Popup End */
+
+/* TV Popup Start */
+.tv-popup__info{
+	margin-left: 70px;
+}
+.tv-popup__info::before{
+	height: 270px;
+	top: 8px;
+}
+.tv-popup__items{
+	margin-top: 35px;
+}
+/* TV Popup End */
+
+/* Firmware Popup Start */
+.firmware-popup__info{
+	margin-left: 60px;
+}
+.firmware-popup__info::before{
+	height: 355px;
+	top: 8px;
+}
+/* Firmware Popup End */
+
+/* Large Popup Start */
+.large-popup__info{
+	margin-left: 50px;
+}
+.large-popup__info::before{
+	height: 270px;
+	top: 8px;
+}
+/* Large Popup End */
